@@ -46,6 +46,7 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
       Fix handling of packet statistics.
       Fix packet timestamping.
       Fix packet filtering with low snaplen.
+      Improve connection status reporting.
     Hurd:
       Support network capture devices too.
       Fix a few device activation bugs.
